samples/_failures_safe/1761402766_73f0c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fd65cf5.c: In function ‘parser_init’:
./samples/SAFE/__tmp_1fd65cf5.c:159:15: error: expected ‘)’ at end of input
  159 |     if (parser
      |        ~      ^
      |               )
./samples/SAFE/__tmp_1fd65cf5.c:159:5: error: expected declaration or statement at end of input
  159 |     if (parser
      |     ^~
